<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Globetrotter</string>
    <!-- START FireBaseUI -->
    <string name="fui_progress_dialog_loading">Wczytuję…</string>
    <string name="fui_sign_in_default">Zaloguj się</string>
    <string name="fui_cancel">Anuluj</string>
    <string name="fui_continue">Dalej</string>
    <string name="fui_tos_and_pp">Kontynuując, potwierdzasz, że akceptujesz te dokumenty: %1$s i %2$s.</string>
    <string name="fui_tos_and_pp_footer">%1$s     %2$s</string>
    <string name="fui_no_internet" translation_descripition="User message shown when sign-in is attempted while offline.">Błąd sieci. Sprawdź połączenie z internetem.</string>
    <string name="fui_idp_name_google">Google</string>
    <string name="fui_idp_name_facebook">Facebook</string>
    <string name="fui_idp_name_twitter">Twitter</string>
    <string name="fui_idp_name_github">GitHub</string>
    <string name="fui_idp_name_phone">Telefon</string>
    <string name="fui_idp_name_email">E-mail</string>
    <string name="fui_sign_in_with_google">Zaloguj się przez Google</string>
    <string name="fui_sign_in_with_facebook">Zaloguj się przez Facebooka</string>
    <string name="fui_sign_in_with_twitter">Zaloguj się przez Twittera</string>
    <string name="fui_sign_in_with_github">Zaloguj się przez GitHuba</string>
    <string name="fui_sign_in_with_email">Zaloguj się za pomocą e-maila</string>
    <string name="fui_sign_in_with_phone">Zaloguj się z użyciem numeru telefonu</string>
    <string name="fui_sign_in_anonymously">Kontynuuj jako gość</string>
    <string name="fui_sign_in_with_apple">Zaloguj się przez Apple</string>
    <string name="fui_sign_in_with_microsoft">Zaloguj się przez Microsoft</string>
    <string name="fui_sign_in_with_yahoo">Zaloguj się przez Yahoo</string>
    <string name="fui_next_default">Dalej</string>
    <string name="fui_email_hint">Adres e-mail</string>
    <string name="fui_phone_hint">Numer telefonu</string>
    <string name="fui_password_hint">Hasło</string>
    <string name="fui_required_field">Nie możesz zostawić tego pola pustego.</string>
    <string name="fui_invalid_email_address">Nieprawidłowy adres e-mail</string>
    <string name="fui_missing_email_address">Aby kontynuować, wpisz adres e-mail</string>
    <string name="fui_missing_first_and_last_name">Wpisz imię i nazwisko.</string>
    <string name="fui_progress_dialog_checking_accounts">Szukam istniejących kont…</string>
    <string name="fui_title_register_email">Rejestracja</string>
    <string name="fui_name_hint">Imię i nazwisko</string>
    <string name="fui_button_text_save">Zapisz</string>
    <string name="fui_progress_dialog_signing_up">Rejestruję…</string>
    <plurals name="fui_error_weak_password">
        <item quantity="one">Hasło jest za słabe. Powinno mieć przynajmniej %1$d znak i być kombinacją liter i cyfr.</item>
        <item quantity="few">Hasło jest za słabe. Powinno mieć przynajmniej %1$d znaki i być kombinacją liter i cyfr.</item>
        <item quantity="many">Hasło jest za słabe. Powinno mieć przynajmniej %1$d znaków i być kombinacją liter i cyfr.</item>
        <item quantity="other">Hasło jest za słabe. Powinno mieć przynajmniej %1$d znaku i być kombinacją liter i cyfr</item>
    </plurals>
    <string name="fui_email_account_creation_error">Rejestracja konta e-mail nie powiodła się</string>
    <string name="fui_terms_of_service">Warunki korzystania z usługi</string>
    <string name="fui_privacy_policy">Polityka prywatności</string>
    <string name="fui_welcome_back_idp_header">Masz już konto</string>
    <string name="fui_welcome_back_email_header">Witamy z powrotem</string>
    <string name="fui_welcome_back_email_link_header">Masz już konto\n</string>
    <string name="fui_welcome_back_idp_prompt">Adres %1$s został już przez Ciebie użyty. Aby kontynuować, zaloguj się przez: %2$s.</string>
    <string name="fui_welcome_back_password_prompt_body">Adres %1$s został już przez Ciebie użyty do logowania. Wpisz hasło tego konta.</string>
    <string name="fui_welcome_back_email_link_prompt_body">Adres %1$s został już użyty. Możesz połączyć swoje konto w serwisie %2$s z adresem %1$s, logując się poniżej za pomocą e-maila z linkiem.\n\nAby procedura łączenia konta w serwisie %2$s z tym adresem powiodła się, link musisz otworzyć na tym samym urządzeniu i w tej samej przeglądarce.</string>
    <string name="fui_progress_dialog_signing_in">Loguję…</string>
    <string name="fui_trouble_signing_in">Masz problem z zalogowaniem się?</string>
    <string name="fui_title_recover_password_activity">Odzyskiwanie hasła</string>
    <string name="fui_title_confirm_recover_password">Sprawdź pocztę</string>
    <string name="fui_password_recovery_body">Na ten adres e-mail zostaną wysłane instrukcje wyjaśniające, jak zresetować hasło.</string>
    <string name="fui_button_text_send">Wyślij</string>
    <string name="fui_confirm_recovery_body">Aby odzyskać hasło, wykonaj instrukcje, które wysłaliśmy Ci na adres %1$s.</string>
    <string name="fui_progress_dialog_sending">Wysyłam…</string>
    <string name="fui_error_email_does_not_exist">Nie istnieje konto, do którego pasuje ten adres e-mail.</string>
    <string name="fui_error_unknown">Wystąpił nieznany błąd.</string>
    <string name="fui_error_invalid_password">Nieprawidłowe hasło.</string>
    <string name="fui_accessibility_logo">Logo aplikacji</string>
    <string name="fui_email_link_header">E-mail umożliwiający zalogowanie się został wysłany\n</string>
    <string name="fui_email_link_email_sent">Na adres %1$s wysłaliśmy wiadomość umożliwiającą zalogowanie się i dodatkowe instrukcje. Sprawdź pocztę, by się zalogować.</string>
    <string name="fui_email_link_trouble_getting_email_header">E-mail nie dotarł?</string>
    <string name="fui_email_link_trouble_getting_possible_fixes">Typowe rozwiązania tego problemu:\n\u2022 Sprawdź, czy e-mail nie został oznaczony jako spam lub objęty którymś z filtrów.\n\u2022 Sprawdź połączenie z internetem.\n\u2022 Sprawdź, czy został wpisany poprawny adres e-mail.\n\u2022 Sprawdź, czy nie kończy się miejsce w skrzynce odbiorczej oraz czy nie ma innych problemów z jej ustawieniami.\n</string>
    <string name="fui_email_link_trouble_getting_email_resend_solution">Jeżeli wykonanie powyższych czynności nie dało żadnych rezultatów, możesz wysłać e-mail jeszcze raz. Link wysłany w poprzedniej wiadomości przestanie być aktywny.</string>
    <string name="fui_email_link_resend">Wyślij ponownie</string>
    <string name="fui_email_link_wrong_device_header">Wykryto nowe urządzenie lub nową przeglądarkę</string>
    <string name="fui_email_link_wrong_device_message">Otwórz link na tym samym urządzeniu, na którym rozpoczęto proces logowania i w tej samej przeglądarce.</string>
    <string name="fui_email_link_invalid_link_header">Nie można się zalogować</string>
    <string name="fui_email_link_invalid_link_message">Kod aktywacyjny jest nieprawidłowy. Może się to zdarzyć, jeśli kod ma nieprawidłowy format, wygasł lub został już wykorzystany.</string>
    <string name="fui_email_link_different_anonymous_user_header">Sesja została zakończona</string>
    <string name="fui_email_link_different_anonymous_user_message">Sesja powiązana z tą prośbą o zalogowanie wygasła lub została wyczyszczona.</string>
    <string name="fui_email_link_confirm_email_header">Potwierdź adres e-mail</string>
    <string name="fui_email_link_confirm_email_message">Potwierdź adres e-mail, aby kontynuować logowanie się</string>
    <string name="fui_email_link_dismiss_button">Odrzuć</string>
    <string name="fui_email_link_cross_device_linking_text">Podjęto próbę połączenia konta %1$s z kontem, na którym używasz podanego adresu e-mail, ale link został otwarty na innym urządzeniu, na którym użytkownik nie był zalogowany.\n\nJeśli nadal chcesz połączyć konto w serwisie %1$s, otwórz link na urządzeniu, na którym rozpoczęto logowanie. W przeciwnym razie wybierz Dalej, by zalogować się na tym urządzeniu.</string>
    <string name="fui_email_link_cross_device_sign_in_button_text">Zaloguj się przez: %1$s</string>
    <string name="fui_verify_phone_number_title">Wpisz numer telefonu</string>
    <string name="fui_invalid_phone_number">Wpisz prawidłowy numer telefonu</string>
    <string name="fui_enter_confirmation_code">Wpisz sześciocyfrowy kod, który wysłaliśmy na numer</string>
    <string name="fui_resend_code_in">Kod można ponownie wysłać za 0:%02d</string>
    <string name="fui_verify_your_phone_title">Zweryfikuj swój numer telefonu</string>
    <string name="fui_verifying">Weryfikuję…</string>
    <string name="fui_incorrect_code_dialog_body">Nieprawidłowy kod. Spróbuj jeszcze raz.</string>
    <string name="fui_error_too_many_attempts">Ten numer telefonu został użyty zbyt wiele razy.</string>
    <string name="fui_error_quota_exceeded">Podczas weryfikacji Twojego numeru telefonu wystąpił problem.</string>
    <string name="fui_error_session_expired">Ten kod stracił ważność.</string>
    <string name="fui_sign_in_with_phone_number">Zaloguj się z użyciem numeru telefonu</string>
    <string name="fui_auto_verified">Numer telefonu został automatycznie zweryfikowany</string>
    <string name="fui_resend_code">Wyślij kod ponownie</string>
    <string name="fui_verify_phone_number">Zweryfikuj numer telefonu</string>
    <string name="fui_sms_terms_of_service">Gdy klikniesz „%1$s”, może zostać wysłany SMS. Może to skutkować pobraniem opłaty za przesłanie wiadomości i danych.</string>
    <string name="fui_sms_terms_of_service_and_privacy_policy_extended">Klikając „%1$s”, potwierdzasz, że akceptujesz te dokumenty: %2$s i %3$s. Może zostać wysłany SMS. Może to skutkować pobraniem opłat za przesłanie wiadomości i danych.</string>
    <!-- END FireBaseUI -->
    <string name="back">Wstecz</string>
    <string name="edit">Edytuj</string>
    <string name="edit_title">Zmień miejsce</string>
    <string name="add_title">Dodaj miejsce</string>
    <string name="title">Nazwa</string>
    <string name="radius">Promień zasięgu (w metrach)</string>
    <string name="description">Opis</string>
    <string name="submit">Zapisz</string>
    <string name="photo_info">Przytrzymaj zdjęcie by usunąć</string>
    <string name="description_title">Szczegóły</string>
    <string name="globetrotter">Globetrotter</string>
    <string name="login">Zaloguj się</string>
    <string name="logout">Wyloguj</string>
    <string name="your_places">Twoje miejsca</string>
    <string name="map">Mapa</string>
    <string name="create">Dodaj miejsce</string>
    <string name="delete">Usuń</string>
    <string name="location_message">Pobieranie obecnej lokalizacji użytkownika</string>
    <string name="take_a_picture">Zrób zdjęcie</string>
    <string name="title_activity_map">Mapa</string>
    <string name="title_activity_camera">Aparat</string>
    <string name="validation_error">Uzupełnij wszystkie wymagane pola</string>
    <string name="error">Wystąpił błąd</string>
    <string name="position_set">Pobrano pozycję urządzenia (long: %.6f, lat: %.6f)</string>
</resources>